deployment/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fe
---
apiVersion: v1
kind: Namespace
metadata:
  name: be
---
apiVersion: v1
kind: Namespace
metadata:
  name: db
